--- a/estilo.css
+++ b/estilo.css
@@ -9,7 +9,8 @@ body {
     margin:0 auto;
     padding:10px;
     background-color:rgba(220,0,0,80%)    ;
-    width:365px;
+    max-width:365px;
+    width:85%;
     height:540px;
     border-radius: 25px;
   }
