--- a/estilo.css
+++ b/estilo.css
@@ -1,70 +1,64 @@
 body {
-  padding: 30px;
-  margin: 0;
-  background: linear-gradient(to right, #00AAFF, #00FF6C);
+  padding: 25px;
+  margin-left:auto;
+  margin-right: 20px;
+  /*background: linear-gradient(to left, #00AAFF, #00FF6C)*/;
+  background-image: url(../Calcurako/wood.jpg);
+  background-origin: padding-box;
+  background-clip: border-box;
+  background-repeat: no-repeat;
+  background-size: 1950px 1600px;
 }
 
 .calculadora{
     display:block;
     margin:0 auto;
-    padding:10px;
-    background-color:rgba(220,0,0,80%)    ;
-    width:365px;
-    height:540px;
-    border-radius: 25px;
+    padding:5px;
+    background-color:rgba(86, 210, 214, 0.8);
+    /*background: #cc521a;*/
+    width:315px;
+    height:520px;
+    border-radius: 15px;
   }
   .calculadora td button{
     display:block;
-    width:80px;
+    width:72px;
     height:42px;
-    font-size: 15px;
+    font-size: 12px;
   }
 
   .calculadora td input{
     display:block;
-    width:72px;
+    width:65px;
     height:35px;
-    font-size: 15px;
+    font-size: 12px;
     text-align: center;
   }
   
   #subtotal1{
     display:block;
-    width:80px;
-    height:42px;
-    font-size: 15px;
+    width:72px;
+    height:41px;
+    font-size: 12px;
     text-align: center;
     background-color: #fff;
   }
 
   #subtotal2{
     display:block;
-    width:80px;
-    height:42px;
-    font-size: 15px;
+    width:72px;
+    height:41px;
+    font-size: 12px;
     text-align: center;
     background-color: #fff;
     }
 
   #subtotal3{
     display:block;
-    width:80px;
-    height:42px;
-    font-size: 15px;
+    width:72px;
+    height:41px;
+    font-size: 12px;
     text-align: center;
     background-color: #fff;
-    color: bold;
   }
 
-
-  #resultado{
-    display:block;
-    text-align: right;
-    font-size: 40px;
-    margin-bottom: 50px;
-    width:300px;
-    height: 100px;
-    line-height: 100px;
-    background-color:#fff;
-    border-radius: 25px;
-   }
