--- a/estilo.css
+++ b/estilo.css
@@ -3,7 +3,7 @@ body {
   margin-left:auto;
   margin-right: 20px;
   /*background: linear-gradient(to left, #00AAFF, #00FF6C)*/;
-  background-image: url(../wood.jpg);
+  background-image: url(https://github.com/JoseAscona/Joeyascona.github.io/blob/main/wood.jpg);
   background-origin: padding-box;
   background-clip: border-box;
   background-repeat: no-repeat;
