--- a/estilo.css
+++ b/estilo.css
@@ -2,7 +2,7 @@ body {
   padding: 25px;
   margin-left:auto;
   margin-right: 20px;
-  background-image: url(../wood.jpg);
+  background-image: url("../wood.jpg");
   background-origin: padding-box;
   background-clip: border-box;
   background-repeat: no-repeat;
@@ -14,7 +14,6 @@ body {
     margin:0 auto;
     padding:5px;
     background-color:rgba(86, 210, 214, 0.8);
-    /*background: #cc521a;*/
     width:315px;
     height:520px;
     border-radius: 15px;
